--- a/webthucung/app/templates/giao_dien_khach_hang.html
+++ b/webthucung/app/templates/giao_dien_khach_hang.html
@@ -256,63 +256,7 @@
               </div>
             </div>
     
-            <div class="row">
-              <div class="col-lg-4 col-md-12 mb-4">
-                <div class="card">
-                  <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/002.jpg" class="img-fluid" />
-                    <a href="#!">
-                      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-                    </a>
-                  </div>
-                  <div class="card-body">
-                    <h5 class="card-title">Post title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Read</a>
-                  </div>
-                </div>
-              </div>
-    
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                  <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/022.jpg" class="img-fluid" />
-                    <a href="#!">
-                      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-                    </a>
-                  </div>
-                  <div class="card-body">
-                    <h5 class="card-title">Post title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Read</a>
-                  </div>
-                </div>
-              </div>
-    
-              <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card">
-                  <div class="bg-image hover-overlay" data-mdb-ripple-init data-mdb-ripple-color="light">
-                    <img src="https://mdbootstrap.com/img/new/standard/nature/035.jpg" class="img-fluid" />
-                    <a href="#!">
-                      <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
-                    </a>
-                  </div>
-                  <div class="card-body">
-                    <h5 class="card-title">Post title</h5>
-                    <p class="card-text">
-                      Some quick example text to build on the card title and make up the bulk of the
-                      card's content.
-                    </p>
-                    <a href="#!" class="btn btn-primary" data-mdb-ripple-init>Read</a>
-                  </div>
-                </div>
-              </div>
+           
             </div>
           </section>
           <!--Section: Content-->
@@ -365,7 +309,7 @@
     
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(50, 195, 62, 0.2);">
-          <a class="text-dark" href="https://mdbootstrap.com/">PETHOUSE.COM</a>
+          <a class="text-dark" href=" ">PETHOUSE.COM</a>
         </div>
         <!-- Copyright -->
       </footer>
