--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -81,6 +81,41 @@
             border-radius: 5px;
             cursor: pointer;
         }
+        .footer {
+            background-color:rgb(41, 95, 41); /* Màu nền tối */
+            color: #ffffff; /* Màu chữ trắng */
+            padding: 40px 0;
+        }
+        
+        .footer h4 {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+        }
+        
+        .footer ul {
+            list-style: none;
+            padding: 0;
+        }
+        
+        .footer ul li {
+            margin-bottom: 8px;
+        }
+        
+        .footer ul li a {
+            color: #d1d1d1;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .footer ul li a:hover {
+            color: #f8f9fa; /* Màu trắng khi hover */
+            text-decoration: underline;
+        }
+        
+        .footer .care {
+            color: #f8c291; /* Màu nhấn đặc biệt */
+        }
     </style>
 </head>
 <body>
