--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -102,6 +102,7 @@
       </header>
       <main>
         <div class="content">
+          {% comment %}
           <div>
             <div class="w3-sidebar w3-bar-block w3-card msb chung">
               <a href="#" class="w3-bar-item w3-button">Link 1</a>
@@ -120,6 +121,7 @@
               <a href="#" class="w3-bar-item w3-button">Link 3</a>
             </div>
           </div>
+          {% endcomment %}
 
           <div class="mgl chung">
             <div class="pt-2 text-center fw-bold fs-1">
